razorpay moved to new app

--- a/home/templates/userside/checkout.html
+++ b/home/templates/userside/checkout.html
@@ -270,7 +270,7 @@
     
     {% endblock mainscript %}
    
-    <!-- <form action="{% url 'payment_success' %}" method="POST">
+    <!-- <form action="" method="POST">
         <input type="hidden" name="order_id" value="{{ order_id }}"> -->
  <!-- <script>
        var options = {
