--- a/home/templates/userside/index.html
+++ b/home/templates/userside/index.html
@@ -46,14 +46,37 @@
 </style>
 
 <!-- userside/index.html -->
-{% if messages %}
-<div class="alert {% if message.tags == 'error' %}alert-danger alert-dismissible fade show{% elif message.tags == 'success' %}alert-success alert-dismissible fade show {% endif %}" role="alert">
-    {% for message in messages%}
-    <strong>{{ message.tags }}</strong> {{ message }}
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-  {% endfor %}
+{% if messages%}
+{% for message in messages %}
+{% if message.tags is "success" %}
+
+<div class="alert alert-success d-flex align-items-center" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+    <div>
+     {{messages}}
+    </div>   </div>
+
+  {% elif message.tags is "error" %}
+  
+<div class="alert alert-danger d-flex align-items-center" role="alert">
+  <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+  <div>
+    {{message}}
+  </div>
 </div>
-{% endif %}
+{% else %}
+
+<div class="alert alert-primary d-flex align-items-center" role="alert">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+      <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+    </svg>
+    <div>
+     {{message}}
+    </div>
+  </div>
+    {% endif %}
+    {% endfor%}
+    {% endif %}
 <div id="header-carousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         {% for category in categories %}
@@ -324,6 +347,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
+                        <a href="{% url 'wishlist' product.id %}"> <i class="fas fa-heart text-primary" id="heart-icon"></i></a>
                         <img class="img-fluid w-100" src="{{ product.product_image.first.image.url }}" style="height: 500px;" >
                        
                          <!-- <img class="img-fluid w-100" src="{{ product.prod_image.url }}" alt="">  -->
