--- a/home/templates/userside/notika.html
+++ b/home/templates/userside/notika.html
@@ -1,7 +1,7 @@
-
+{% extends 'main.html' %}
 {% load static %}
-
- <!doctype html>
+{% block corousel %}
+ <!-- <!doctype html>
 <html class="no-js" lang="">
 
 <head>
@@ -9,7 +9,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Data Table | Notika - Notika Admin Template</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <!-- favicon
 		============================================ -->
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'notika/notika/img/favicon.ico' %}">
@@ -18,10 +18,10 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900" rel="stylesheet">
         <!-- Bootstrap CSS
             ============================================ -->
-        <link rel="stylesheet" href="{% static 'notika/documentation/css/bootstrap.min.css' %}">
+        <!-- <link rel="stylesheet" href="{% static 'notika/documentation/css/bootstrap.min.css' %}"> -->
         <!-- Bootstrap CSS
             ============================================ -->
-        <link rel="stylesheet" href="{% static 'notika/notika/css/font-awesome.min.css' %}">
+        <!-- <link rel="stylesheet" href="{% static 'notika/notika/css/font-awesome.min.css' %}"> -->
         <!-- owl.carousel CSS
             ============================================ -->
         <link rel="stylesheet" href="{% static 'notika/notika/css/owl.carousel.css' %}">
@@ -64,19 +64,20 @@
      modernizr JS
 		============================================ -->
     <script src="{% static 'notika/notika/js/vendor/modernizr-2.8.3.min.js' %}"></script>
-</head>
+<!-- </head>
 
-<body>
+<body> -->
   
     <!-- Data Table area Start-->
-    <div class="data-table-area">
+    <div class="col lg-12 align-center">
+    <div class="data-table-area ml-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="data-table-list">
                         <div class="basic-tb-hd">
-                            <h2>Basic Example</h2>
-                            <p>It's just that simple. Turn your simple table into a sophisticated data table and offer your users a nice experience and great features without any effort.</p>
+                            <h2>Order History</h2>
+                           
                         </div>
                         <div class="table-responsive">
                             <table id="data-table-basic" class="table table-striped">
@@ -85,12 +86,10 @@
                                         <!-- <th>Order ID</th>  -->
                                         <th>Tracking No.</th> 
                                         <th>Quantity</th>
-                                       <th>Order Price</th>
-                                       <th>Tax/GST</th>
+                                      
                                        <th>Grand Total</th>
-                                       <!-- <th>Status</th> -->
-                                       <th>Payment Mode</th> 
-                                       <th>Payment Status</th>
+                                       <th>Status</th>
+                                      
                                        <th>Date of Ordering</th>
                                       <th></th>
                                     </tr>
@@ -101,15 +100,15 @@
                                         <!-- <td>{{data.order.id}}</td> -->
                                         <td>{{data.order.tracking_number}}</td> 
                                         <td>{{data.order.total_qnty}}</td>   
-                                        <td >₹{{data.order.order_total}}</td>
-                                        <td>₹{{data.order.tax|floatformat:2}}</td>
+                                        
+                                      
                                         <td>₹{{data.order.grand_total}}</td>
                                         <!--  <td>{{data.order.status}}</td> -->
                                   
-                                        <td>{{data.order.payment_mode}}</td> 
-                                        <td>{{data.order.payment_status}}</td>
+                                        <td>{{data.order.status}}</td> 
+                                       
                                         <td>{{data.order.created_at}}</td>
-                                        <th><a>view</a></th>
+                                        <th><a href="{% url 'my_orders' data.order.id %}">view</a></th>
                                         
                     </tr>           
 
@@ -127,7 +126,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div></div>
     <!-- Data Table area End-->
    
     <!-- jquery
@@ -142,17 +141,7 @@
     <!-- price-slider JS
 		============================================ -->
     <script src="{% static 'notika/notika/js/jquery-price-slider.js' %}"></script>
-    <!-- owl.carousel JS
-		============================================ -->
-    <script src="{% static 'notika/notika/js/owl.carousel.min.js' %}"></script>
-    <!-- scrollUp JS
-		============================================ -->
-    <script src="{% static 'notika/notika/js/jquery.scrollUp.min.js' %}"></script>
-    <!-- meanmenu JS
-		============================================ -->
-    <script src="{% static 'notika/notika/js/meanmenu/jquery.meanmenu.js' %}"></script>
-    <!-- counterup JS
-		============================================ -->
+    <!-- owl.carousel</div>============================== -->
     <script src="{% static 'notika/notika/js/counterup/jquery.counterup.min.js' %}"></script>
     <script src="{% static 'notika/notika/js/counterup/waypoints.min.js' %}"></script>
     <script src="{% static 'notika/notika/js/counterup/counterup-active.js' %}"></script>
@@ -192,6 +181,7 @@
 		============================================ -->
     <script src="{% static 'notika/notika/js/main.js' %}"></script>
 	
-</body>
+<!-- </body>
 
-</html>
+</html> -->
+{% endblock corousel %}
