--- a/home/templates/userside/main.html
+++ b/home/templates/userside/main.html
@@ -116,7 +116,7 @@
                         </span> </a>
                 <a href="{% url 'view_wishlist' %}" class="btn border">
                     <i class="fas fa-heart text-primary"></i>
-                    <span class="badge">{{wishlist_count}}</span>
+                    <span class="badge">{{request.session.wishlist_count}}</span>
                 </a>
                 <a href="{% url 'cart' %}" class="btn border">
                     <i class="fas fa-shopping-cart text-primary"></i>
